--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,4 +6,6 @@ html
     script(src='http://code.jquery.com/jquery-1.10.1.min.js')
     script(src='/javascripts/app.js')
   body
+    a(href="https://github.com/SeraphimSerapis/paypal-rest-node-sample")
+      img.ribbon(src="/images/ribbon.png", alt="Fork me on GitHub")
     block content
