--- a/views/create.jade
+++ b/views/create.jade
@@ -1,20 +1,20 @@
 extends layout
 
 block content
-	- if (method === 'paypal') { method = 'PayPal'; var isPayPal = true; }
-	- else if(method === 'credit_card') { method = 'Credit Card' };
-	- var header = "Created a new " + method + " payment";
-	- var payment_details = JSON.stringify(payment, null, 2);
-	- var action = "";
-	- for(var i=0; i < payment.links.length; i++) {
-	- 	var link = payment.links[i];
-	- 	if (link.method === 'REDIRECT') {
-	- 		action = link.href;
+	- var redirectUrl;
+	- if(payment.payer.payment_method === 'paypal') {
+	- 	for(var i=0; i < payment.links.length; i++) {
+	- 		var link = payment.links[i];
+	- 		if (link.method === 'REDIRECT') {
+	- 			redirectUrl = link.href;
+	- 		}
 	- 	}
 	- }
+	- var header = "Created a new " + payment.payer.payment_method + " payment";
+	- var paymentDetails = JSON.stringify(payment, null, 2);
 	h1= header
-	if isPayPal
-		a(href=action)
+	if redirectUrl
+		a(href=redirectUrl)
 			button(type='submit') Redirect
 	pre
-		p= payment_details
+		p= paymentDetails
