--- a/views/index.jade
+++ b/views/index.jade
@@ -8,11 +8,11 @@ block content
     form(action="/create")
       input(type='hidden', name='method', value='paypal')
       label(for='amount') Amount
-      input(type='text', id='amount', name='amount')
+      input(type='text', id='amount', name='amount', required)
       label(for='currency') Currency
-      input(type='text', id='currency', maxlength='3', placeholder='USD', name='currency')
+      input(type='text', id='currency', maxlength='3', placeholder='USD', name='currency', required)
       label(for='description') Description
-      input(type='text', id='description', name='description')
+      input(type='text', id='description', name='description', placeholder='Optional')
       button(type='submit') Create Payment
 
   div#creditcard
@@ -20,21 +20,23 @@ block content
     form(action="/create")
         input(type='hidden', name='method', value='credit_card')
         label(for='amount') Amount
-        input(type='text', id='amount', name='amount')
+        input(type='text', id='amount', name='amount', required)
         label(for='currency') Currency
-        input(type='text', id='currency', maxlength='3', placeholder='USD', name='currency')
+        input(type='text', id='currency', maxlength='3', placeholder='USD', name='currency', required)
+        label(for='description') Description
+        input(type='text', id='description', name='description', placeholder='Optional')
         label(for='first_name') First Name
-        input(type='text', id='first_name', name='first_name')
+        input(type='text', id='first_name', name='first_name', required)
         label(for='last_name') Last Name
-        input(type='text', id='last_name', name='last_name')
+        input(type='text', id='last_name', name='last_name', required)
         label(for='number') Number
-        input(type='text', id='number', name='number')
+        input(type='text', id='number', name='number', required)
         label(for='type') Type
-        input(type='text', id='type', name='type')
+        input(type='text', id='type', name='type', required)
         label(for='expire_month') Expire Month
-        input(type='text', id='expire_month', name='expire_month')
+        input(type='text', id='expire_month', name='expire_month', required)
         label(for='expire_year') Expire Year
-        input(type='text', id='expire_year', name='expire_year')
+        input(type='text', id='expire_year', name='expire_year', required)
         label(for='cvv2') CVV
-        input(type='text', id='cvv2', name='cvv2')
+        input(type='text', id='cvv2', name='cvv2', required)
         button(type='submit') Create Payment
